--- a/002.fluctuations/fluctuations.ipynb
+++ b/002.fluctuations/fluctuations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2a663d4",
+   "id": "c2012f32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7319ac57",
+   "id": "af3458bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
     "    firmsK = []\n",
     "    firmsπ = []\n",
     "    firmsL = []\n",
-    "    firmsB = []\n",
+    "    bankB = []\n",
     "    firmsNum = []\n",
     "    firmsNEntry = []\n",
     "    rate = []\n",
@@ -103,7 +103,7 @@
     "        Statistics.firmsL.append(Status.firmsLsum)\n",
     "        Statistics.bankπ.append(BankSector.π)\n",
     "        Statistics.bankL.append(BankSector.L)\n",
-    "        Statistics.firmsB.append(BankSector.B)\n",
+    "        Statistics.bankB.append(BankSector.B)\n",
     "        Statistics.firmsNum.append(len(Status.firms))\n",
     "        Statistics.rate.append(BankSector.getAverageRate())\n",
     "\n",
@@ -212,7 +212,7 @@
     "    @staticmethod\n",
     "    def determineEquity():\n",
     "        # equation 14\n",
-    "        result = BankSector.π + BankSector.E - BankSector.B\n",
+    "        result = BankSector.π + BankSector.E + BankSector.B\n",
     "        # Statistics.log(\"  bank E %s =%s + %s - %s\" % (result,BankSector.π , BankSector.E , BankSector.B))\n",
     "        return result\n",
     "\n",
@@ -224,19 +224,20 @@
     "        if (firm.π + firm.A) < 0:\n",
     "            # bankrupt: we sum Bn-1\n",
     "            if firm.L - firm.K < 0:\n",
-    "                BankSector.B += (firm.L - firm.K)\n",
+    "                BankSector.B += (firm.K - firm.L)\n",
     "            Status.firms.remove(firm)\n",
     "            Status.numFailuresGlobal += 1\n",
     "            i += 1\n",
     "    Statistics.log(\"        - removed %d firms %s\" % (i, \"\" if i == 0 else \" (next step B=%s)\" % BankSector.B))\n",
     "    Statistics.bankruptcy.append(i)\n",
+    "\n",
     "    return i\n",
     "\n",
     "\n",
     "def addFirms(Nentry):\n",
     "    for i in range(Nentry):\n",
     "        Status.firms.append(Firm())\n",
-    "        Statistics.firmsNEntry.append(Nentry)\n",
+    "    Statistics.firmsNEntry.append(Nentry)\n",
     "    Statistics.log(\"        - add %d new firms (Nentry)\" % Nentry)\n",
     "\n",
     "\n",
@@ -295,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14125d85",
+   "id": "716872eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3114e87f",
+   "id": "ab121d9b",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -431,7 +432,7 @@
     "    yy = []\n",
     "    for i in range(150, Config.T):\n",
     "        xx.append(i)\n",
-    "        yy.append(-Statistics.firmsB[i] / Statistics.firmsNum[i])\n",
+    "        yy.append(Statistics.bankB[i] / Statistics.firmsNum[i])\n",
     "    plt.plot(xx, yy, 'b-')\n",
     "    plt.ylabel(\"avg bad debt\")\n",
     "    plt.xlabel(\"t\")\n",
@@ -460,9 +461,9 @@
     "    xx = []\n",
     "    yy = []\n",
     "    for i in range(150, Config.T):\n",
-    "        if Statistics.firmsB[i] < 0:\n",
+    "        if Statistics.bankB[i] > 0:\n",
     "            xx.append(i)\n",
-    "            yy.append(math.log(-Statistics.firmsB[i]))\n",
+    "            yy.append(math.log(Statistics.bankB[i]))\n",
     "    plt.plot(xx, yy, 'b-')\n",
     "    plt.ylabel(\"ln B\")\n",
     "    plt.xlabel(\"t\")\n",
@@ -587,6 +588,22 @@
     "    plot_distribution_kl(show)\n",
     "\n",
     "\n",
+    "def generate_dataframe_from_statistics():\n",
+    "    return pd.DataFrame(\n",
+    "        {\n",
+    "            'firmsNum':Statistics.firmsNum,\n",
+    "            'firmsNentry':Statistics.firmsNEntry,\n",
+    "            'bankruptcy':Statistics.bankruptcy,\n",
+    "            'firmsK':Statistics.firmsK,\n",
+    "            'firmsL':Statistics.firmsL,\n",
+    "            'firmsProfit':Statistics.firmsπ,\n",
+    "            'rate':Statistics.rate,\n",
+    "            'bankL':Statistics.bankL,\n",
+    "            'bankB':Statistics.bankB,\n",
+    "            'bankProfit':Statistics.bankπ,\n",
+    "        }\n",
+    "    )\n",
+    "\n",
     "def _config_description_():\n",
     "    description = sys.argv[0]\n",
     "    for attr in dir(Config):\n",
@@ -608,11 +625,11 @@
     "        results.write(f\"{'bankruptcy':>15}\")\n",
     "        results.write(f\"{'firmsK':>15}\")\n",
     "        results.write(f\"{'firmsL':>15}\")\n",
-    "        results.write(f\"{'firmsB':>15}\")\n",
-    "        results.write(f\"{'firmsπ':>15}\")\n",
+    "        results.write(f\"{'firmsProfit':>15}\")\n",
     "        results.write(f\"{'rate':>10}\")\n",
     "        results.write(f\"{'bankL':>15}\")\n",
-    "        results.write(f\"{'bankπ':>15}\")\n",
+    "        results.write(f\"{'bankB':>15}\")\n",
+    "        results.write(f\"{'bankProfit':>15}\")\n",
     "        results.write(f\"\\n\")\n",
     "        for i in range(Config.T):\n",
     "            line = f\"{i:>3}\"\n",
@@ -621,10 +638,10 @@
     "            line += f\"{Statistics.bankruptcy[i]:15.2f}\"\n",
     "            line += f\"{Statistics.firmsK[i]:15.2f}\"\n",
     "            line += f\"{Statistics.firmsL[i]:15.2f}\"\n",
-    "            line += f\"{Statistics.firmsB[i]:15.2f}\"\n",
     "            line += f\"{Statistics.firmsπ[i]:15.2f}\"\n",
     "            line += f\"{Statistics.rate[i]:10.4f}\"\n",
     "            line += f\"{Statistics.bankL[i]:15.2f}\"\n",
+    "            line += f\"{Statistics.bankB[i]:15.2f}\"\n",
     "            line += f\"{Statistics.bankπ[i]:15.2f}\"\n",
     "            results.write(f\"{line}\\n\")"
    ]
@@ -632,10 +649,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3519092",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "bd6a5380",
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -703,17 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75b9c879",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "881a0c6f",
+   "id": "838e73a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,11 +726,14 @@
     "if __name__ == \"__main__\":\n",
     "    if not os.path.isdir(OUTPUT_DIRECTORY):\n",
     "        os.mkdir(OUTPUT_DIRECTORY)\n",
-    "    if not is_notebook():\n",
-    "        doInteractive()\n",
-    "    else:\n",
+    "    if is_notebook():\n",
+    "        global dataframe\n",
     "        doSimulation()\n",
-    "        show_figures(True)"
+    "        show_figures(True)\n",
+    "        dataframe = generate_dataframe_from_statistics()\n",
+    "        dataframe\n",
+    "    else:\n",
+    "        doInteractive()"
    ]
   }
  ],
