--- a/002.fluctuations/fluctuations.ipynb
+++ b/002.fluctuations/fluctuations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "440894c3",
+   "id": "9312693e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from progress.bar import Bar\n",
     "\n",
     "random.seed(40579)\n",
     "OUTPUT_DIRECTORY = \"output\"\n",
@@ -55,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115603eb",
+   "id": "133d4117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,10 +355,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7c35f40",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "b0fa59fb",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def doSimulation(doDebug=False, interactive=False):\n",
@@ -367,7 +364,10 @@
     "    updateFirmsStatus()\n",
     "    updateBankL()\n",
     "    BankSector.D = BankSector.L - BankSector.E\n",
-    "    progress_bar = Bar(\"Executing model\", max=Config.T) if interactive and not doDebug else None\n",
+    "    progress_bar = None\n",
+    "    if interactive and not doDebug:\n",
+    "        from progress.bar import Bar\n",
+    "        progress_bar = Bar(\"Executing model\", max=Config.T)\n",
     "    if progress_bar:\n",
     "        progress_bar.update()\n",
     "    for t in range(Config.T):\n",
@@ -408,16 +408,8 @@
     "        plt.ylabel(\"log freq\")\n",
     "        plt.xlabel(\"log K\")\n",
     "        plt.title(\"Zipf plot of firm sizes\")\n",
-    "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/zipf_density.svg\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4836cf79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/zipf_density.svg\")\n",
+    "\n",
     "    def plot_zipf_density1(show=True):\n",
     "        Statistics.log(\"zipf_density\")\n",
     "        plt.clf()\n",
@@ -676,9 +668,11 @@
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/distribution.svg\")\n",
     "\n",
     "    def run(save=False):\n",
-    "\n",
     "        method_list = [func for func in dir(Plots) if func.startswith(\"plot_\")]\n",
-    "        progress_bar = Bar(\"Saving figures\", max=len(method_list)) if save else None\n",
+    "        progress_bar = None\n",
+    "        if save:\n",
+    "            from progress.bar import Bar\n",
+    "            progress_bar = Bar(\"Saving figures\", max=len(method_list))\n",
     "        if progress_bar:\n",
     "            progress_bar.update()\n",
     "\n",
@@ -717,7 +711,10 @@
     "\n",
     "\n",
     "def save_results(filename, interactive=False):\n",
-    "    progress_bar = Bar(\"Saving results\", max=Config.T) if interactive else None\n",
+    "    progress_bar = None\n",
+    "    if interactive:\n",
+    "        from progress.bar import Bar\n",
+    "        progress_bar = Bar(\"Saving results\", max=Config.T)\n",
     "    if progress_bar:\n",
     "        progress_bar.update()\n",
     "    filename = os.path.basename(filename).rsplit('.', 1)[0]\n",
@@ -768,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3e90502",
+   "id": "7a65ba29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67eed188",
+   "id": "9e4b924e",
    "metadata": {},
    "outputs": [],
    "source": [
