--- a/002.fluctuations/fluctuations.ipynb
+++ b/002.fluctuations/fluctuations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9312693e",
+   "id": "c1c5f82d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,13 +48,18 @@
     "    # if True, new firms are created using formula of paper, if not, same N number of firms is sustained in time\n",
     "    # the same are failed, the same are introduced:\n",
     "    allowNewEntry = True\n",
-    "    newFirmsInitialValues = False"
+    "\n",
+    "    # If True, firms added obtain initial values L_i0, A_i0 and K_i0, if False, the mean of the surviving values is used\n",
+    "    newFirmsInitialValues = False\n",
+    "\n",
+    "    # If True, the equilibrium rate is used (a fix value) instead of formula for interest in the paper\n",
+    "    rateEquilibrium = True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133d4117",
+   "id": "6753a0ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,10 +197,12 @@
     "        return result\n",
     "\n",
     "    def determineInterestRate(self):\n",
-    "        # (equation 12)\n",
-    "        # Beta = (1/v)-1\n",
-    "        return Config.φ/Config.g - 2*Config.ω*( 1/Config.v -1)*Config.φ*Config.φ/(Config.g*Config.g)\n",
-    "        return (2 + self.A) / (2 * Config.c * Config.g * (1 / (Config.c * Config.φ) + self.π + self.A) +\n",
+    "        if Config.rateEquilibrium:\n",
+    "            # Beta = (1/v)-1\n",
+    "            return Config.φ/Config.g - 2*Config.ω*( 1/Config.v -1)*Config.φ*Config.φ/(Config.g*Config.g)\n",
+    "        else:\n",
+    "            # (equation 12)\n",
+    "            return (2 + self.A) / (2 * Config.c * Config.g * (1 / (Config.c * Config.φ) + self.π + self.A) +\n",
     "                               2 * Config.c * Config.g * BankSector.L * (\n",
     "                                       Config.λ * self.__ratioK() + (1 - Config.λ) * self.__ratioA()))\n",
     "\n",
@@ -355,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0fa59fb",
+   "id": "1a088f08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a65ba29",
+   "id": "28a515fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e4b924e",
+   "id": "c562672b",
    "metadata": {},
    "outputs": [],
    "source": [
