mode instead of mean for new firms

--- a/002.fluctuations/fluctuations.ipynb
+++ b/002.fluctuations/fluctuations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1c5f82d",
+   "id": "6cf96d56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import statistics\n",
     "\n",
     "random.seed(40579)\n",
     "OUTPUT_DIRECTORY = \"output\"\n",
@@ -59,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6753a0ca",
+   "id": "8381e4d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +69,19 @@
     "    logfile = None\n",
     "\n",
     "    @staticmethod\n",
-    "    def determine_best_networth_firm(firms):\n",
+    "    def determine_best_and_worst_networth_firm(firms):\n",
     "        A_max = 0\n",
+    "        A_min = np.inf\n",
     "        firm_with_best_networth = None\n",
+    "        firm_with_worst_networth = None\n",
     "        for firm in firms:\n",
     "            if firm.A > A_max:\n",
     "                firm_with_best_networth = firm\n",
     "                A_max = firm.A\n",
-    "        return firm_with_best_networth\n",
+    "            if firm.A < A_min:\n",
+    "                firm_with_worst_networth = firm\n",
+    "                A_min = firm.A\n",
+    "        return firm_with_best_networth, firm_with_worst_networth\n",
     "\n",
     "    @staticmethod\n",
     "    def enableLog(logfile: str = None):\n",
@@ -114,6 +120,8 @@
     "\n",
     "    best_networth_rate = []\n",
     "    best_networth_firm = []\n",
+    "    worst_networth = []\n",
+    "    worst_networth_firm = []\n",
     "    rate_without_best_networth = []\n",
     "    num_igual_r = []\n",
     "\n",
@@ -138,8 +146,10 @@
     "        Statistics.firmsNum.append(len(Status.firms))\n",
     "        Statistics.rate.append(BankSector.getAverageRate())\n",
     "\n",
-    "        best_networth_firm = Statistics.determine_best_networth_firm(Status.firms)\n",
+    "        best_networth_firm, worst_networth_firm = Statistics.determine_best_and_worst_networth_firm(Status.firms)\n",
     "        Statistics.best_networth_firm.append(best_networth_firm.id)\n",
+    "        Statistics.worst_networth_firm.append(worst_networth_firm.id)\n",
+    "        Statistics.worst_networth.append(best_networth_firm.A)\n",
     "        Statistics.best_networth_rate.append(best_networth_firm.r)\n",
     "        Statistics.best_networth_A_percentage.append(best_networth_firm.A / Status.firmsAsum)\n",
     "        r_without_best_networth_firm = 0\n",
@@ -199,12 +209,12 @@
     "    def determineInterestRate(self):\n",
     "        if Config.rateEquilibrium:\n",
     "            # Beta = (1/v)-1\n",
-    "            return Config.φ/Config.g - 2*Config.ω*( 1/Config.v -1)*Config.φ*Config.φ/(Config.g*Config.g)\n",
+    "            return Config.φ / Config.g - 2 * Config.ω * (1 / Config.v - 1) * Config.φ * Config.φ / (Config.g * Config.g)\n",
     "        else:\n",
     "            # (equation 12)\n",
     "            return (2 + self.A) / (2 * Config.c * Config.g * (1 / (Config.c * Config.φ) + self.π + self.A) +\n",
-    "                               2 * Config.c * Config.g * BankSector.L * (\n",
-    "                                       Config.λ * self.__ratioK() + (1 - Config.λ) * self.__ratioA()))\n",
+    "                                   2 * Config.c * Config.g * BankSector.L * (\n",
+    "                                           Config.λ * self.__ratioK() + (1 - Config.λ) * self.__ratioA()))\n",
     "\n",
     "    def __ratioK(self):\n",
     "        return self.K / Status.firmsKsum\n",
@@ -284,17 +294,9 @@
     "\n",
     "\n",
     "def addFirms(Nentry):\n",
-    "    newFirmL = 0\n",
-    "    newFirmA = 0\n",
-    "    newFirmK = 0\n",
-    "    for firm in Status.firms:\n",
-    "        newFirmL += firm.L\n",
-    "        newFirmA += firm.A\n",
-    "        newFirmK += firm.K\n",
-    "    newFirmL /= len(Status.firms)\n",
-    "    newFirmA /= len(Status.firms)\n",
-    "    newFirmK /= len(Status.firms)\n",
-    "\n",
+    "    newFirmL = statistics.mode(list(map(lambda x: x.L, Status.firms)))\n",
+    "    newFirmA = statistics.mode(list(map(lambda x: x.A, Status.firms)))\n",
+    "    newFirmK = statistics.mode(list(map(lambda x: x.K, Status.firms)))\n",
     "    for i in range(Nentry):\n",
     "        newFirm = Firm()\n",
     "        if not Config.newFirmsInitialValues:\n",
@@ -302,20 +304,14 @@
     "            newFirm.A = newFirmA\n",
     "            newFirm.K = newFirmK\n",
     "        Status.firms.append(newFirm)\n",
-    "\n",
     "    Statistics.firmsNEntry.append(Nentry)\n",
-    "    Statistics.log(\"        - add %d new firms (Nentry)\" % Nentry)\n",
+    "    Statistics.log(f\"        - add %d new firms (Nentry) with L={newFirmL},A={newFirmA},K={newFirmK}\" % Nentry)\n",
     "\n",
     "\n",
     "def updateFirmsStatus():\n",
-    "    Status.firmsAsum = 0.0\n",
-    "    Status.firmsKsum = 0.0\n",
-    "    Status.firmsLsum = 0.0\n",
-    "    for firm in Status.firms:\n",
-    "        Status.firmsAsum += firm.A\n",
-    "        Status.firmsKsum += firm.K\n",
-    "        Status.firmsLsum += firm.L\n",
-    "\n",
+    "    Status.firmsAsum = sum(map(lambda x: x.A, Status.firms))\n",
+    "    Status.firmsKsum = sum(map(lambda x: x.K, Status.firms))\n",
+    "    Status.firmsLsum = sum(map(lambda x: x.L, Status.firms))\n",
     "    Status.firmsKsums.append(Status.firmsKsum)\n",
     "    Status.firmsGrowRate.append(\n",
     "        0 if Status.t == 0 else (Status.firmsKsums[Status.t] - Status.firmsKsums[Status.t - 1]) / Status.firmsKsums[\n",
@@ -362,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a088f08",
+   "id": "937b5492",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +444,7 @@
     "        for firm in Status.firms:\n",
     "            if round(firm.K) > 0:\n",
     "                y.append(math.log(firm.K))\n",
-    "        y.sort();\n",
+    "        y.sort()\n",
     "        y.reverse()\n",
     "        for i in range(len(y)):\n",
     "            x.append(math.log(float(i + 1)))\n",
@@ -542,6 +538,32 @@
     "    #     plt.xlabel(\"t\")\n",
     "    #     plt.title(\"GuruA\")\n",
     "    #     plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/guruA.svg\")\n",
+    "\n",
+    "    def plot_ddf_networth(show=True):\n",
+    "        networths = []\n",
+    "        worst_firm_A = np.inf\n",
+    "        xx = []\n",
+    "        x = 1\n",
+    "        for firm in Status.firms:\n",
+    "            networths.append(firm.A)\n",
+    "            if firm.A < worst_firm_A:\n",
+    "                worst_firm_A = firm.A\n",
+    "            x += 1\n",
+    "            xx.append(x)\n",
+    "        networths.sort(reverse=True)\n",
+    "        networths1 = list(map(lambda firm: firm.A, Status.firms))\n",
+    "\n",
+    "        for i in range(len(networths)):\n",
+    "            networths[i] = networths[i] / worst_firm_A\n",
+    "        plt.clf()\n",
+    "        fig = plt.figure(figsize=(12, 8))\n",
+    "        ax = fig.add_subplot(111)\n",
+    "        plt.plot(xx, networths, 'b-')\n",
+    "        plt.title(\"ddf of A normalized\")\n",
+    "        ax.set_yscale('log')\n",
+    "        ax.set_xscale('log')\n",
+    "        # plt.axis('scaled')\n",
+    "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/ddf_networth.svg\")\n",
     "\n",
     "    def plot_best_networth_rate(show=True):\n",
     "        plt.clf()\n",
@@ -759,6 +781,8 @@
     "            line += f\"{Statistics.bankB[i]:15.2f}\"\n",
     "            line += f\"{Statistics.bankπ[i]:15.2f}\"\n",
     "            line += f\"{Statistics.best_networth_firm[i]:15.2f}\"\n",
+    "            line += f\"{Statistics.worst_networth_firm[i]:15.2f}\"\n",
+    "            line += f\"{Statistics.worst_networth[i]:15.2f}\"\n",
     "            line += f\"{Statistics.best_networth_rate[i]:15.2f}\"\n",
     "            line += f\"{Statistics.rate_without_best_networth[i]:15.2f}\"\n",
     "            line += f\"{Statistics.best_networth_A_percentage[i]:15.2f}\"\n",
@@ -772,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28a515fa",
+   "id": "fe0f0338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c562672b",
+   "id": "012802d8",
    "metadata": {},
    "outputs": [],
    "source": [
