id of company was bad usaged to plot best/worst A company

--- a/002.fluctuations/fluctuations.ipynb
+++ b/002.fluctuations/fluctuations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f0c04cd",
+   "id": "11e6fd9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,14 @@
     "import matplotlib.pyplot as plt\n",
     "import statistics\n",
     "\n",
-    "random.seed(40579)\n",
+    "random.seed(10579)\n",
     "OUTPUT_DIRECTORY = \"output\"\n",
     "\n",
     "\n",
     "class Config:\n",
     "    T = 1000  # time (1000)\n",
-    "    N = 100  # number of firms\n",
-    "    Ñ = 1  # size parameter\n",
+    "    N = 1000  # number of firms\n",
+    "    Ñ = 1     # size parameter\n",
     "\n",
     "    φ = 0.1  # capital productivity (constant and uniform)\n",
     "    c = 1  # parameter bankruptcy cost equation\n",
@@ -43,12 +43,13 @@
     "    π_i0 = 0  # profit\n",
     "    B_i0 = 0  # bad debt\n",
     "\n",
+    "    A_multiplier = 0.001\n",
     "    # risk coefficient for bank sector (Basel)\n",
     "    v = 0.2\n",
     "\n",
     "    # if True, new firms are created using formula of paper, if not, same N number of firms is sustained in time\n",
     "    # the same are failed, the same are introduced:\n",
-    "    allowNewEntry = True\n",
+    "    allowNewEntry = False\n",
     "\n",
     "    # If True, firms added obtain initial values L_i0, A_i0 and K_i0, if False, the mean of the surviving values is used\n",
     "    newFirmsInitialValues = False\n",
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9783dc69",
+   "id": "77503b7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,14 +75,22 @@
     "        A_min = np.inf\n",
     "        firm_with_best_networth = None\n",
     "        firm_with_worst_networth = None\n",
-    "        for firm in firms:\n",
-    "            if firm.A > A_max:\n",
-    "                firm_with_best_networth = firm\n",
-    "                A_max = firm.A\n",
-    "            if firm.A < A_min:\n",
-    "                firm_with_worst_networth = firm\n",
-    "                A_min = firm.A\n",
-    "        return firm_with_best_networth, firm_with_worst_networth\n",
+    "        r_without_best_networth_firm = 0\n",
+    "        firm_with_best_networth_r = 0\n",
+    "        for i in range(len(firms)):\n",
+    "            if firms[i].A > A_max:\n",
+    "                firm_with_best_networth = i\n",
+    "                firm_with_best_networth_r = firms[i].r\n",
+    "                A_max = firms[i].A\n",
+    "            if firms[i].A < A_min:\n",
+    "                firm_with_worst_networth = i\n",
+    "                A_min = firms[i].A\n",
+    "            r_without_best_networth_firm += firms[i].r\n",
+    "\n",
+    "        r_without_best_networth_firm -= firm_with_best_networth_r\n",
+    "        r_without_best_networth_firm /= (len(firms)-1)   # is the average\n",
+    "        return (firm_with_best_networth, firm_with_worst_networth, A_max, firm_with_best_networth_r,\n",
+    "                r_without_best_networth_firm)\n",
     "\n",
     "    @staticmethod\n",
     "    def enableLog(logfile: str = None):\n",
@@ -146,17 +155,15 @@
     "        Statistics.firmsNum.append(len(Status.firms))\n",
     "        Statistics.rate.append(BankSector.getAverageRate())\n",
     "\n",
-    "        best_networth_firm, worst_networth_firm = Statistics.determine_best_and_worst_networth_firm(Status.firms)\n",
-    "        Statistics.best_networth_firm.append(best_networth_firm.id)\n",
-    "        Statistics.worst_networth_firm.append(worst_networth_firm.id)\n",
-    "        Statistics.worst_networth.append(best_networth_firm.A)\n",
-    "        Statistics.best_networth_rate.append(best_networth_firm.r)\n",
-    "        Statistics.best_networth_A_percentage.append(best_networth_firm.A / Status.firmsAsum)\n",
-    "        r_without_best_networth_firm = 0\n",
-    "        for firm in Status.firms:\n",
-    "            if firm.id != best_networth_firm.id:\n",
-    "                r_without_best_networth_firm += firm.r\n",
-    "        Statistics.rate_without_best_networth.append(r_without_best_networth_firm / (len(Status.firms) - 1))\n",
+    "        (best_networth_firm_id, worst_networth_firm_id,\n",
+    "         best_networth_firm_A, best_networth_firm_r,\n",
+    "         r_without_best_networth_firm ) = Statistics.determine_best_and_worst_networth_firm(Status.firms)\n",
+    "        Statistics.best_networth_firm.append(best_networth_firm_id)\n",
+    "        Statistics.worst_networth_firm.append(worst_networth_firm_id)\n",
+    "        Statistics.worst_networth.append(best_networth_firm_A)\n",
+    "        Statistics.best_networth_rate.append(best_networth_firm_r)\n",
+    "        Statistics.best_networth_A_percentage.append(best_networth_firm_A / Status.firmsAsum)\n",
+    "        Statistics.rate_without_best_networth.append(r_without_best_networth_firm)\n",
     "        # to estimate later a matrix of Axr:\n",
     "        for firm in Status.firms:\n",
     "            Statistics.matrix_Ar_A.append(firm.A)\n",
@@ -173,6 +180,8 @@
     "    t = 0\n",
     "\n",
     "    firmsKsums = []\n",
+    "    firmsAsums = []\n",
+    "    firmsLsums = []\n",
     "    firmsGrowRate = []\n",
     "\n",
     "    firmIdMax = 0\n",
@@ -191,6 +200,7 @@
     "class Firm:\n",
     "    K = Config.K_i0  # capital\n",
     "    A = Config.A_i0  # asset\n",
+    "    A_prev = Config.A_i0    # previous value of A in each iteration\n",
     "    r = 0.0  # rate money is given by banksector\n",
     "    L = Config.L_i0  # credit\n",
     "    π = 0.0  # profit\n",
@@ -277,35 +287,43 @@
     "\n",
     "\n",
     "def removeBankruptedFirms():\n",
-    "    i = 0\n",
+    "    removed_firms = 0\n",
     "    BankSector.B = 0.0\n",
     "    for firm in Status.firms[:]:\n",
-    "        if (firm.π + firm.A) < 0:\n",
+    "        A_threshold_to_exit = firm.A_prev * (1 + Config.ω * (1 / Config.v - 1) * Config.φ / Config.g * (1 + Config.A_multiplier))\n",
+    "        #Statistics.log(f'firm #{firm.id}: A(1+w...)={A_threshold_to_exit}  A=' +\n",
+    "        #               f'{firm.A}  {\"***\" if firm.A < A_threshold_to_exit else \"---\"}')\n",
+    "        #if (firm.π + firm.A) < 0:\n",
+    "        if Status.t >= 5 and firm.A <= A_threshold_to_exit:\n",
     "            # bankrupt: we sum Bn-1\n",
     "            if firm.L - firm.K < 0:\n",
     "                BankSector.B += (firm.K - firm.L)\n",
     "            Status.firms.remove(firm)\n",
     "            Status.numFailuresGlobal += 1\n",
-    "            i += 1\n",
-    "    Statistics.log(\"        - removed %d firms %s\" % (i, \"\" if i == 0 else \" (next step B=%s)\" % BankSector.B))\n",
-    "    Statistics.bankruptcy.append(i)\n",
+    "            removed_firms += 1\n",
+    "    Statistics.log(\"        - removed %d firms %s\" %\n",
+    "                   (removed_firms, \"\" if removed_firms == 0 else \" (next step B=%s)\" % BankSector.B))\n",
+    "    Statistics.bankruptcy.append(removed_firms)\n",
     "\n",
-    "    return i\n",
+    "    return removed_firms\n",
     "\n",
     "\n",
     "def addFirms(Nentry):\n",
-    "    newFirmL = statistics.mode(list(map(lambda x: x.L, Status.firms)))\n",
-    "    newFirmA = statistics.mode(list(map(lambda x: x.A, Status.firms)))\n",
-    "    newFirmK = statistics.mode(list(map(lambda x: x.K, Status.firms)))\n",
+    "    #newFirmL = statistics.mode(list(map(lambda x: x.L, Status.firms)))\n",
+    "    newFirmA_prev = statistics.mode(list(map(lambda x: x.A_prev, Status.firms)))\n",
+    "    exit_condition = newFirmA_prev * (1 + Config.ω * (1 / Config.v - 1) * Config.φ / Config.g * (1 + Config.A_multiplier))\n",
+    "\n",
+    "    newFirmK = newFirmA_prev / 0.2 # statistics.mode(list(map(lambda x: x.K, Status.firms)))\n",
+    "    newFirmL = newFirmK - exit_condition\n",
     "    for i in range(Nentry):\n",
     "        newFirm = Firm()\n",
     "        if not Config.newFirmsInitialValues:\n",
     "            newFirm.L = newFirmL\n",
-    "            newFirm.A = newFirmA\n",
+    "            newFirm.A = exit_condition\n",
     "            newFirm.K = newFirmK\n",
     "        Status.firms.append(newFirm)\n",
     "    Statistics.firmsNEntry.append(Nentry)\n",
-    "    Statistics.log(f\"        - add %d new firms (Nentry) with L={newFirmL},A={newFirmA},K={newFirmK}\" % Nentry)\n",
+    "    Statistics.log(f\"        - add %d new firms (Nentry) with L={newFirmL},A={newFirmA_prev},K={newFirmK}\" % Nentry)\n",
     "\n",
     "\n",
     "def updateFirmsStatus():\n",
@@ -313,6 +331,8 @@
     "    Status.firmsKsum = sum(map(lambda x: x.K, Status.firms))\n",
     "    Status.firmsLsum = sum(map(lambda x: x.L, Status.firms))\n",
     "    Status.firmsKsums.append(Status.firmsKsum)\n",
+    "    Status.firmsAsums.append(Status.firmsAsum)\n",
+    "    Status.firmsLsums.append(Status.firmsLsum)\n",
     "    Status.firmsGrowRate.append(\n",
     "        0 if Status.t == 0 else (Status.firmsKsums[Status.t] - Status.firmsKsums[Status.t - 1]) / Status.firmsKsums[\n",
     "            Status.t - 1])\n",
@@ -332,6 +352,7 @@
     "        firm.u = firm.determineU()\n",
     "\n",
     "        firm.π = firm.determineProfit()\n",
+    "        firm.A_prev = firm.A\n",
     "        firm.A = firm.determineAssets()\n",
     "        Status.firmsπsum += firm.π\n",
     "    # update Kt-1 and At-1 (Status.firmsKsum && Status.firmsAsum):\n",
@@ -358,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7db3cf0",
+   "id": "6410dac3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +389,7 @@
     "    updateBankL()\n",
     "    BankSector.D = BankSector.L - BankSector.E\n",
     "    progress_bar = None\n",
-    "    if interactive and not doDebug:\n",
+    "    if interactive:\n",
     "        from progress.bar import Bar\n",
     "        progress_bar = Bar(\"Executing model\", max=Config.T)\n",
     "    if progress_bar:\n",
@@ -391,6 +412,8 @@
     "\n",
     "\n",
     "class Plots:\n",
+    "\n",
+    "    @staticmethod\n",
     "    def plot_zipf_density(show=True):\n",
     "        Statistics.log(\"zipf_density\")\n",
     "        plt.clf()\n",
@@ -413,6 +436,7 @@
     "        plt.title(\"Zipf plot of firm sizes\")\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/zipf_density.svg\")\n",
     "\n",
+    "    @staticmethod\n",
     "    def plot_zipf_density1(show=True):\n",
     "        Statistics.log(\"zipf_density\")\n",
     "        plt.clf()\n",
@@ -436,6 +460,7 @@
     "        plt.title(\"Zipf plot of firm sizes (modified)\")\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/zipf_density1.svg\")\n",
     "\n",
+    "    @staticmethod\n",
     "    def plot_zipf_rank(show=True):\n",
     "        Statistics.log(\"zipf_rank\")\n",
     "        plt.clf()\n",
@@ -454,21 +479,30 @@
     "        plt.title(\"Rank of K (zipf)\")\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/zipf_rank.svg\")\n",
     "\n",
+    "    @staticmethod\n",
     "    def plot_aggregate_output(show=True):\n",
     "        Statistics.log(\"aggregate_output\")\n",
     "        plt.clf()\n",
     "        xx1 = []\n",
+    "        xx2 = []\n",
+    "        xx3 = []\n",
+    "        xx4 = []\n",
     "        yy = []\n",
     "        for i in range(150, Config.T):\n",
     "            yy.append(i)\n",
     "            xx1.append(math.log(Status.firmsKsums[i]))\n",
-    "        plt.plot(yy, xx1, 'b-')\n",
-    "        plt.ylabel(\"log K\")\n",
+    "            xx2.append(math.log(Status.firmsAsums[i]))\n",
+    "            xx3.append(math.log(Status.firmsLsums[i])-1) #TODO quitar el -1\n",
+    "        plt.plot(yy, xx1, 'b-', label='logK')\n",
+    "        plt.plot(yy, xx2, 'r-', label='logA')\n",
+    "        plt.plot(yy, xx3, 'g-', label='(logL)-1')\n",
     "        plt.xlabel(\"t\")\n",
     "        plt.title(\"Logarithm of aggregate output\")\n",
+    "        plt.legend(loc=0)\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/aggregate_output.svg\")\n",
     "\n",
-    "    def plot_scatter_Ar(show=True):\n",
+    "    @staticmethod\n",
+    "    def disabled_plot_scatter_Ar(show=True):\n",
     "        plt.clf()\n",
     "        plt.ylabel(\"r\")\n",
     "        plt.xlabel(\"A\")\n",
@@ -476,6 +510,7 @@
     "        plt.scatter(Statistics.matrix_Ar_A, Statistics.matrix_Ar_r)\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/equity_scatter.pdf\")\n",
     "\n",
+    "    @staticmethod\n",
     "    def plot_histogram_equity(show=True):\n",
     "        plt.clf()\n",
     "        plt.hist(Statistics.matrix_Ar_A, bins=20, log=True)\n",
@@ -484,6 +519,7 @@
     "        plt.ylabel('log counts')\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/equity_histogram.pdf\")\n",
     "\n",
+    "    @staticmethod\n",
     "    def plot_percentage_equity(show=True):\n",
     "        plt.clf()\n",
     "        plt.figure(figsize=(12, 8))\n",
@@ -539,19 +575,18 @@
     "    #     plt.title(\"GuruA\")\n",
     "    #     plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/guruA.svg\")\n",
     "\n",
+    "    @staticmethod\n",
     "    def plot_ddf_networth(show=True):\n",
-    "        networths = []\n",
     "        worst_firm_A = np.inf\n",
     "        xx = []\n",
     "        x = 1\n",
     "        for firm in Status.firms:\n",
-    "            networths.append(firm.A)\n",
     "            if firm.A < worst_firm_A:\n",
     "                worst_firm_A = firm.A\n",
     "            x += 1\n",
     "            xx.append(x)\n",
+    "        networths = list(map(lambda x: x.A, Status.firms))\n",
     "        networths.sort(reverse=True)\n",
-    "        networths1 = list(map(lambda firm: firm.A, Status.firms))\n",
     "\n",
     "        for i in range(len(networths)):\n",
     "            networths[i] = networths[i] / worst_firm_A\n",
@@ -565,6 +600,7 @@
     "        # plt.axis('scaled')\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/ddf_networth.svg\")\n",
     "\n",
+    "    @staticmethod\n",
     "    def plot_best_networth_rate(show=True):\n",
     "        plt.clf()\n",
     "        plt.figure(figsize=(12, 8))\n",
@@ -584,13 +620,14 @@
     "        color = 'tab:blue'\n",
     "        ax2.set_ylabel('rate', color=color)  # we already handled the x-label with ax1\n",
     "        ax2.plot(yy, Statistics.best_networth_rate, color=color, label=\"r of best networth\")\n",
-    "        ax2.plot(yy, Statistics.rate_without_best_networth, color='tab:green', label=\"r of others\")\n",
+    "        # ax2.plot(yy, Statistics.rate_without_best_networth, color='tab:green', label=\"r of others\")\n",
     "        ax2.tick_params(axis='y', labelcolor=color)\n",
     "        fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
     "        ax1.legend(loc=0)\n",
     "        ax2.legend(loc=1)\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/best_networth.pdf\")\n",
     "\n",
+    "    @staticmethod\n",
     "    def plot_profits(show=True):\n",
     "        Statistics.log(\"profits\")\n",
     "        plt.clf()\n",
@@ -605,7 +642,8 @@
     "        plt.title(\"profits of companies\")\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/profits.svg\")\n",
     "\n",
-    "    def plot_baddebt(show=True):\n",
+    "    @staticmethod\n",
+    "    def disabled_plot_baddebt(show=True):\n",
     "        Statistics.log(\"bad_debt\")\n",
     "        plt.clf()\n",
     "        xx = []\n",
@@ -619,6 +657,7 @@
     "        plt.title(\"Bad debt\")\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/bad_debt_avg.svg\")\n",
     "\n",
+    "    @staticmethod\n",
     "    def plot_bankrupcies(show=True):\n",
     "        Statistics.log(\"bankrupcies\")\n",
     "        plt.clf()\n",
@@ -633,6 +672,7 @@
     "        plt.title(\"Bankrupted firms\")\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/bankrupted.svg\")\n",
     "\n",
+    "    @staticmethod\n",
     "    def plot_bad_debt(show=True):\n",
     "        Statistics.log(\"bad_debt\")\n",
     "        plt.clf()\n",
@@ -662,6 +702,7 @@
     "        plt.title(\"Mean interest rates of companies\")\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/interest_rate.svg\")\n",
     "\n",
+    "    @staticmethod\n",
     "    def plot_growth_rate(show):\n",
     "        Statistics.log(\"growth_rate\")\n",
     "        plt.clf()\n",
@@ -677,6 +718,7 @@
     "        plt.title(\"Growth rates of agg output\")\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/growth_rates.svg\")\n",
     "\n",
+    "    @staticmethod\n",
     "    def plot_distribution_kl(show):\n",
     "        plt.clf()\n",
     "        fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(10, 4))\n",
@@ -696,13 +738,13 @@
     "        plt.tight_layout()\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/distribution.svg\")\n",
     "\n",
-    "    def run(save=False):\n",
+    "    @staticmethod\n",
+    "    def run(save=False, interactive=False):\n",
     "        method_list = [func for func in dir(Plots) if func.startswith(\"plot_\")]\n",
     "        progress_bar = None\n",
-    "        if save:\n",
+    "        if interactive:\n",
     "            from progress.bar import Bar\n",
     "            progress_bar = Bar(\"Saving figures\", max=len(method_list))\n",
-    "        if progress_bar:\n",
     "            progress_bar.update()\n",
     "\n",
     "        for plot in method_list:\n",
@@ -763,7 +805,9 @@
     "        results.write(f\"{'bankL':>15}\")\n",
     "        results.write(f\"{'bankB':>15}\")\n",
     "        results.write(f\"{'bankProfit':>15}\")\n",
-    "        results.write(f\"{'bestA':>15}\")\n",
+    "        results.write(f\"{'bestA_id':>15}\")\n",
+    "        results.write(f\"{'worstA_id':>15}\")\n",
+    "        results.write(f\"{'worstA':>15}\")\n",
     "        results.write(f\"{'bestA_r':>15}\")\n",
     "        results.write(f\"{'others_r':>15}\")\n",
     "        results.write(f\"{'bestA_percen':>15}\")\n",
@@ -796,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29e85fea",
+   "id": "8c295dc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,13 +891,13 @@
     "    if args.log or args.logfile:\n",
     "        Statistics.enableLog(args.logfile)\n",
     "\n",
-    "    doSimulation(doDebug=args.debug, interactive=True)\n",
+    "    doSimulation(doDebug=args.debug, interactive=(not args.log))\n",
     "    if Status.numFailuresGlobal > 0:\n",
     "        Statistics.log(\"[total failures in all times = %s]\" % Status.numFailuresGlobal)\n",
     "    else:\n",
     "        Statistics.log(\"[no failures]\")\n",
     "    if args.plot:\n",
-    "        Plots.run(save=True)\n",
+    "        Plots.run(save=True, interactive=(not args.log))\n",
     "    if args.save:\n",
     "        save_results(filename=args.save, interactive=True)\n",
     "\n",
@@ -869,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fd8c418",
+   "id": "58f61bde",
    "metadata": {},
    "outputs": [],
    "source": [
